--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>MH Universal Service</title>
+	<title>Om Oss</title>
 	<link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="omossmh.css">
@@ -43,7 +43,7 @@
 			<div class="col-lg-12">
 				<div class="content">
 					<h1>
-            Om vår virksomhet   
+            Om Oss  
           </h1>
             <h3 class="infotekst"> MH universal service er et mekanisk verksted og en servicebiltjeneste i Enebakk. Vi reparerer hovedsakelig landbruksmaskiner og anleggsmaskiner, men vi er veldig fleksible og kan reparere det meste. Vi setter fokus på kunden og jobber 24/7 ved nødvendighet. Det er også veldig viktig at alle kunder er fornøyd og vender tilbake; derfor utfører vi kun avtalt arbeid til en avtalt pris.
             </h3>
