--- a/about.html
+++ b/about.html
@@ -59,7 +59,8 @@
           <h3>
             Her finner du oss:
           </h3>
-             <iframe class="googlemap" src="https://snazzymaps.com/embed/25218" style="border:none;"></iframe> 
+             <!--iframe class="googlemap" src="https://snazzymaps.com/embed/25218" style="border:none;"></iframe>-->
+             <iframe class="googlemap" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2009.9090466813436!2d10.990668916388252!3d59.750957481808314!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46415e20733c7a89%3A0x410584fba7342ec2!2sMH+Universalservice!5e0!3m2!1sno!2sno!4v1509403068576"  allowfullscreen></iframe> 
         </div>
       </div>
     </div>
